--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,4 +10,4 @@ repository = "https://github.com/tblah/project-net"
 
 [dependencies]
 proj_crypto = { git = "https://github.com/tblah/project-crypto" }
-
+sodiumoxide = "0.0.12"
