--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,7 @@ repository = "https://github.com/tblah/project-net"
 proj_crypto = { git = "https://github.com/tblah/project-crypto" }
 sodiumoxide = "0.0.12"
 getopts = "0.2"
+
+[[bin]]
+name = "interactive-demo"
+doc = true 
